workspace/log/build_2023-11-04_18-39-45/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_manual_coords()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:98:9: error: declaration of ‘auto x’ has no initializer
   98 |         auto x, y = transform_global_to_local(x, y);
      |         ^~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:98:17: error: conflicting declaration ‘auto y’
   98 |         auto x, y = transform_global_to_local(x, y);
      |                 ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:76:19: note: previous declaration as ‘double y’
   76 |         double x, y, z;
      |                   ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:99:58: error: ‘max_e’ was not declared in this scope
   99 |         rotate_drone(x, y, global_pose.x, global_pose.y, max_e);
      |                                                          ^~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
